@@ -34,7 +34,7 @@ G_BEGIN_DECLS
 RsvgNode * rsvg_new_text (void);
 RsvgNode * rsvg_new_tspan (void);
 RsvgNode * rsvg_new_tref (void);
-char * rsvg_make_valid_utf8 (const char *str);
+char * rsvg_make_valid_utf8 (const char *str, int len);
 
 G_END_DECLS
 
